# netcdf_handler

./: .cdtproject  .cproject  .gitignore  .project  COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  NCArray.cc  NCArray.h  NCByte.cc  NCByte.h  NCContainerPersistence.cc  NCContainerPersistence.h  NCFloat32.cc  NCFloat32.h  NCFloat64.cc  NCFloat64.h  NCGrid.cc  NCGrid.h  NCInt16.cc  NCInt16.h  NCInt32.cc  NCInt32.h  NCModule.cc  NCModule.h  NCRequestHandler.cc  NCRequestHandler.h  NCSequence.cc  NCSequence.h  NCStr.cc  NCStr.h  NCStructure.cc  NCStructure.h  NCTypeFactory.cc  NCTypeFactory.h  NCUInt16.cc  NCUInt16.h  NCUInt32.cc  (+27 more)
OSX_Resources/: Description.plist  Info.plist  Info.plist.proto  InstallationCheck  InstallationCheck.strings  ReadMe.txt  Welcome.html  update_mac_package_contents.pl
bes-testsuite/: Makefile.am  Makefile.in  bes.conf.in  bes.conf.modules.in  generate_data_baseline.sh.in  generate_metadata_baseline.sh.in  handler_tests_macros.m4  nc4_netcdf_handler_tests.at  netcdf_handlerTest.at  tmp  ugrid_tests.at
bes-testsuite/besstandalone.netcdf/: bears.nc.1.exp  coads_climatology.nc.0.exp  fnoc1.nc.1.exp  fnoc1.nc.2.exp  fnoc1.nc.3.exp  fnoc1.nc.5.exp  stringtest.nc.1.exp  test.nc.0.exp  test.nc.1.exp  test.nc.2.exp  test.nc.2a.exp  test.nc.3.exp  test.nc.3a.exp
bes-testsuite/nc/: coads_climatology.nc.0.bescmd  coads_climatology.nc.ddx.bescmd.baseline  coads_climatology.nc.dmr.bescmd.baseline  fnoc1.nc.1.bescmd  fnoc1.nc.2.bescmd  fnoc1.nc.3.bescmd  fnoc1.nc.4.bescmd  fnoc1.nc.5.bescmd  nc4_nc_classic_compressed.nc.0.bescmd.baseline  nc4_nc_classic_compressed.nc.2.bescmd.baseline  nc4_nc_classic_compressed.nc.dap.bescmd.baseline  nc4_nc_classic_compressed.nc.dmr.bescmd.baseline  nc4_nc_classic_no_comp.nc.2.bescmd.baseline  nc4_nc_classic_no_comp.nc.dap.bescmd.baseline  nc4_nc_classic_no_comp.nc.dmr.bescmd.baseline  nc4_strings.nc.0.bescmd  nc4_strings.nc.0.bescmd.baseline  nc4_strings.nc.2.bescmd  nc4_strings.nc.2.bescmd.baseline  nc4_strings.nc.dap.bescmd.baseline  nc4_strings.nc.dmr.bescmd.baseline  nc4_strings_comp.nc.2.bescmd.baseline  nc4_strings_comp.nc.dap.bescmd.baseline  nc4_strings_comp.nc.dmr.bescmd.baseline  nc4_unsigned_types.nc.2.bescmd.baseline  nc4_unsigned_types.nc.dap.bescmd.baseline  nc4_unsigned_types.nc.dmr.bescmd.baseline  nc4_unsigned_types_comp.nc.0.bescmd.baseline  nc4_unsigned_types_comp.nc.2.bescmd.baseline  nc4_unsigned_types_comp.nc.dap.bescmd.baseline  nc4_unsigned_types_comp.nc.dmr.bescmd.baseline  ref_tst_compound.nc.2.bescmd.baseline  ref_tst_compound.nc.dap.bescmd.baseline  ref_tst_compound.nc.dmr.bescmd.baseline  ref_tst_compound2.nc.0.bescmd.baseline  ref_tst_compound2.nc.2.bescmd.baseline  ref_tst_compound2.nc.dap.bescmd.baseline  ref_tst_compound2.nc.dmr.bescmd.baseline  ref_tst_compound3.nc.2.bescmd.baseline  ref_tst_compound4.nc.1.bescmd  (+11 more)
bes-testsuite/nc4_test_files/: nc4_nc_classic_no_comp.ncgen
bes-testsuite/ugrid/: ugrid_1_das.bescmd  ugrid_1_das.bescmd.baseline  ugrid_1_data.bescmd  ugrid_1_data.bescmd.baseline  ugrid_1_dds.bescmd  ugrid_1_dds.bescmd.baseline  ugrid_2_das.bescmd  ugrid_2_data.bescmd  ugrid_2_data.bescmd.baseline  ugrid_2_dds.bescmd  ugrid_2_dds.bescmd.baseline  wrong_argument_type.bes  wrong_argument_type.bes.baseline  wrong_number_of_arguments.bes  wrong_number_of_arguments.bes.baseline
conf/: acinclude.m4  netcdf.m4  netcdf_header.m4
data/: zero_length_array_shows_bug.cdl  zero_length_array_shows_bug.nc
data/nc4_test_files/: make_nc4_new_cardinal_types.c  nc4_new_cardinal_types_comp.nc  nc4_new_cardinal_types_no_comp.nc  nc4_new_cardinal_types_no_comp.ncgen
ncdump/: .gdbinit
testsuite/: 3B42.980909.5.hacked.HDF.das  TestPat.nc.das  TestPat.nc.dds  array_seq.dds  array_vars.dds  atomic_vars.dds  bes.conf.in  complex_vars.dds  nested.das  sequence_vars.dds  simple_seq.dds  structure_vars.dds
testsuite/besstandalone.netcdf/: fnoc1.nc.0.exp  fnoc1.nc.4.exp  fnoc1.nc.6.exp
testsuite/config/: unix.exp
testsuite/nc/: fnoc1.nc.0.bescmd
ugrid_project/: README  bes.conf.in  bes.conf.jhrg.in  gridfields_functions.cc  gridfields_functions.h  hex_demo.bes  run_command  test4_1_dds_ugrid_restrict.bes  test4_dds_ugrid_restrict.bes  wrong_argument_type.bes
win32/: Makefile  config_nc.h  nfconfig.inc
